2003/06/22 14:52 pcg

        * GObject.xs: big change in how perl wrappers are implemented. the
        new implementation will only ever create one perl wrapper (a real
        hash) for any gobject. The combined perl+gobject will stay alive
        as long as one of the partners is alive. The only real changes are
        in gperl_new_object and in the DESTROY method.
        * gperl.h: fix some of the documentation to reflect the new model.
        * Glib.pm: remove overloading, its hould be no longer necessary,
        which should give a speed boost as objects are no longer AMAGIC.
        * GObject.xs: remove unused class argument from ->new to make it
        usable as a proper base class.

2003/06/20 11:29 muppetman

	* README, Makefile.PL: bump version number for 0.24 release

2003/06/19 00:44 pcg

	* Depends.pm: moved to ExtUtils-Depends module.
	* Makefile.PL: add ExtUtils-Depends as prerequisite, please
	install the ExtUtils::Depends module seperately from cvs.

2003/06/16 14:21 muppetman

	* GBoxed.xs, gperl.h: converted GBoxed to use vtable-based wrappers;
	this allows client code to install new wrapper classes that make
	gperl_sv_from_value and gperl_value_from_sv call the right code
	to convert boxed types in custom ways.  GPerlBoxedPackageFunc has
	disappeared and the call signature for gperl_register_boxed has
	changed (well, the meaning of that one extra parameter -- if you
	already passed NULL, there's nothing to worry about).

	* GMainLoop.xs, typemap: added support for some GMainContext and
	GMainLoop methods.

2003/06/13 14:12 muppetman

	* GObject.xs: rename Glib::Object->_new to Glib::Object->new -- it
	should be that because people expect it.  other cleanup.  NOTE: we 
	need to have object wrappers be able to override things like "take
	ownership", "wrap", "unwrap", and "destroy"... as it is, if you
	create a wrapper for a GtkObject from Glib::Object->new, the wrapper
	will be created incorrectly (gtk_object_sink will not be called).